--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@stomp/stompjs": "^5.4.4",
     "@types/google-protobuf": "^3.7.2",
     "@types/lunr": "^2.3.3",
+    "fetch": "^1.1.0",
     "google-protobuf": "^4.0.0-rc.2",
     "grpc-web": "^1.2.0",
     "lunr": "^2.3.8",
