--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@stomp/stompjs": "^5.4.4",
+    "@types/crypto-js": "^4.0.2",
     "@types/google-protobuf": "^3.7.2",
     "@types/lunr": "^2.3.3",
     "crypto-js": "^4.1.1",
