--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "@stomp/stompjs": "^5.4.4",
     "@types/crypto-js": "^4.0.2",
-    "@types/google-protobuf": "^3.7.2",
+    "@types/google-protobuf": "3.7.2",
     "@types/lunr": "^2.3.3",
     "crypto-js": "^4.1.1",
     "fetch": "^1.1.0",
-    "google-protobuf": "^4.0.0-rc.2",
-    "grpc-web": "^1.2.0",
+    "google-protobuf": "4.0.0-rc.2",
+    "grpc-web": "1.2.0",
     "lunr": "^2.3.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
