Cloudbuild added timeout

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,3 +24,6 @@ substitutions:
   _K8_FILE: woz_deployment_nginx.yaml
   _CLUSTER_LOCATION: europe-central2-b
   _CLUSTER_NAME: woz-cluster
+
+# Time out after 30 minutes
+timeout: 1800s
