--- a/woz_deployment_nginx.yaml
+++ b/woz_deployment_nginx.yaml
@@ -10,8 +10,9 @@ spec:
     name: http
   selector:
     app: woz-app
-  type: LoadBalancer
-  loadBalancerIP: "34.118.99.86"
+  type: NodePort
+  # type: LoadBalancer
+  # loadBalancerIP: "34.111.82.65"
 ---
 apiVersion: apps/v1
 kind: Deployment
