--- a/woz_managed_cert.yaml
+++ b/woz_managed_cert.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.gke.io/v1
 kind: ManagedCertificate
 metadata:
-  name: managed-cert
+  name: woz-managed-cert
 spec:
   domains:
     - woz-uog.online
