--- a/woz_deployment_dev.yaml
+++ b/woz_deployment_dev.yaml
@@ -32,6 +32,7 @@ spec:
       - name: woz
         image: europe-west2-docker.pkg.dev/agentdialogue-2cd4b/task-mad-images-repository/woz:latest
         #imagePullPolicy: Never
+        imagePullPolicy: Always
         stdin: true
         ports:
           - containerPort: 3000
