Changes to deployment configurations

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,14 +18,14 @@ steps:
   - CLOUDSDK_COMPUTE_REGION=${_CLUSTER_LOCATION}
   - CLOUDSDK_CONTAINER_CLUSTER=${_CLUSTER_NAME}
 
-# - name: 'gcr.io/cloud-builders/kubectl'
-#   args:
-#   - apply
-#   - -f
-#   - ${_INGRESS_FILE}
-#   env:
-#   - CLOUDSDK_COMPUTE_REGION=${_CLUSTER_LOCATION}
-#   - CLOUDSDK_CONTAINER_CLUSTER=${_CLUSTER_NAME}
+- name: 'gcr.io/cloud-builders/kubectl'
+  args:
+  - apply
+  - -f
+  - ${_INGRESS_FILE}
+  env:
+  - CLOUDSDK_COMPUTE_REGION=${_CLUSTER_LOCATION}
+  - CLOUDSDK_CONTAINER_CLUSTER=${_CLUSTER_NAME}
 
 substitutions:
   _ARTIFACT_REGISTRY_REPOSITORY: task-mad-images-repository 
