--- a/woz_deployment_nginx.yaml
+++ b/woz_deployment_nginx.yaml
@@ -10,9 +10,7 @@ spec:
     name: http
   selector:
     app: woz-app
-  type: LoadBalancer
-  loadBalancerIP: "34.118.60.174"
-  # type: NodePort
+  type: NodePort
 ---
 apiVersion: apps/v1
 kind: Deployment
