Implemented redirect from http to https

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -14,7 +14,7 @@ steps:
   args:
   - apply
   - -f
-  - ${_ROOT_FOLDER}/${_FRONTEND_CONFIG_FILE}
+  - ${_FRONTEND_CONFIG_FILE}
   env:
   - CLOUDSDK_COMPUTE_REGION=${_CLUSTER_LOCATION}
   - CLOUDSDK_CONTAINER_CLUSTER=${_CLUSTER_NAME}
