--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "@types/gapi": "^0.0.39",
     "@types/gapi.auth2": "^0.0.52",
     "@types/gapi.client.sheets": "^4.0.9",
-    "@types/react": "^16.9.43",
-    "@types/react-dom": "^16.9.8",
+    "@types/react": "^16.14.42",
+    "@types/react-dom": "^16.9.19",
+    "grpc-tools": "^1.12.4",
     "@types/uuid": "^8.0.0",
     "cross-env": "^7.0.2",
     "react-scripts": "3.4.1"
