adding build args to Dockerfile.dev

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -46,6 +46,12 @@ simulator_configuration.proto \
 --js_out=import_style=commonjs:/app/src/woz-app/connector/agent-dialogue/generated \
 --grpc-web_out=import_style=typescript,mode=grpcwebtext:/app/src/woz-app/connector/agent-dialogue/generated
 
+ARG spreadsheet_url
+ENV REACT_APP_SPREADSHEET_URL=${spreadsheet_url:-"set_with_build_arg"}
+ARG recipe_url
+ENV REACT_APP_RECIPE_URL=${recipe_url:-"set_with_build_arg"}
+ARG data_url
+ENV REACT_APP_DATA_URL=${data_url:-"set_with_build_arg"}
 
 EXPOSE 3000
 
